# simple-ontology-hosting-tool

./: .gitignore  Cargo.toml  README.md  initialize_db.sh
migrations/: 20240721184649_create_xml_cache.sql
src/: database.rs  lib.rs  main.rs  splitter.rs
