[package]
name = "soht"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4"
anyhow = "1.0.86"
derive_more = "0.99.18"
horned-owl = "1.0.0"
sqlx = { version = "0.7.4", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "uuid",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["v4"] }
